[package]
name = "fastgpt-agent-sandbox-proxy"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio", "query", "ws", "tracing"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
futures-util = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
