[package]
name = "fastgpt-ide-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
futures-util = "0.3"
path-security = "0.2.0"
jsonwebtoken = "9.3"

