[package]
name = "fastgpt-ide-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "time", "sync", "fs", "io-util"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
portable-pty = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
base64 = "0.22.1"
futures-util = "0.3.32"
path-security = "0.2.0"
notify = "9.0.0-rc.4"
notify-debouncer-full = "0.8.0-rc.2"

[dev-dependencies]
tempfile = "3.27.0"
